# Projet-L3-MI6

./: .gitignore  MI6_PROJET.sln  README.txt  makefile  test.txt
App_Client/: App_Client.pro  App_Client.pro.user.324175d  App_Client.pro.user.8cf9a4f  App_Client.pro.user.b915241  clienttcp.cpp  clienttcp.h  clienttcp.ui  fenetreConnexion.cpp  fenetreConnexion.h  fenetreConnexion.ui  image.qrc  main.cpp  xmldoc.cpp  xmldoc.h
Client_Serveur/: Client_Serveur.pro  Client_Serveur.pro.user.b915241  client.cpp  client.h  clienttcp.cpp  clienttcp.h  clienttcp.ui  main.cpp  serveurtcp.cpp  serveurtcp.h
Crypt/: Crypt.pro  Crypt.pro.user.2689e26  Crypt.pro.user.324175d  Crypt.pro.user.8cf9a4f  Crypt.vcxproj  Crypt.vcxproj.filters  Makefile  bigint.cpp.unused  bigint.h.unused  cesar.cpp  engine.cpp  global.cpp  key.cpp  math.cpp  pch.h  random.cpp  rsa.cpp  std.cpp  util.cpp
Crypt/crypt/: cesar.h  engine.h  global.h  key.h  math.h  random.h  rsa.h  std.h  util.h
QT_Client_Serveur/App_Client/: App_Client.pro  clienttcp.cpp  clienttcp.h  clienttcp.ui  main.cpp
SDPE/: SDPE.cpp  SDPE.pro  SDPE.pro.user.2689e26  SDPE.pro.user.8cf9a4f  SDPE.pro.user.b915241  SDPE.vcxproj  SDPE.vcxproj.filters
lib/unix/Release/mpir/: config.h  (+1 more)
lib/win/Debug/mpir/: CMakeLists.txt  dll_mpir_gc.vcxproj.FileListAbsolute.txt  mpir.dll.recipe  mpir.exp  mpir.idb  mpir.lib
lib/win/Debug/mpir/dll_mpir_gc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dll_mpir_gc.lastbuildstate  dll_mpir_gc.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
(+50 files in other folders)
